NetBSD Problem Report #39671

From bernd@arresum.veego.de  Thu Oct  2 12:21:30 2008
Return-Path: <bernd@arresum.veego.de>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 9192763BD01
	for <gnats-bugs@gnats.NetBSD.org>; Thu,  2 Oct 2008 12:21:30 +0000 (UTC)
Message-Id: <200810021221.m92CLKHY004871@arresum.veego.de>
Date: Thu, 2 Oct 2008 14:21:20 +0200 (CEST)
From: Bernd Ernesti <pr200816@veego.de>
Reply-To: Bernd Ernesti <pr200816@veego.de>
To: gnats-bugs@gnats.NetBSD.org
Subject: panic while booting with an acpi kernel on a 790GX board
X-Send-Pr-Version: 3.95

>Number:         39671
>Category:       port-i386
>Synopsis:       panic while booting with an acpi kernel on a 790GX board
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    jmcneill
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Oct 02 12:25:00 +0000 2008
>Closed-Date:    Sat Sep 05 19:44:15 +0000 2009
>Last-Modified:  Sat Sep 05 19:44:15 +0000 2009
>Originator:     Bernd Ernesti
>Release:        NetBSD 4.99.72
>Organization:

>Environment:
System: NetBSD 4.99.72 (GENERIC) #0: Tue Sep 30 22:03:22 PDT 2008 builds@wb25:/home/builds/ab/HEAD/i386/200809300002Z
Architecture: i386
Machine: i386
>Description:
	Booting with the i386cd.iso on a 790GX board results in a panic while using the
	default boot options.
	Disabling acpi 'fixed' that problem.

	Note that there is a ps/2 keyboard attached. The board has only one PS/2 port,
	which seems to be a combined keyboard/mouse port.

cpu0 at mainbus0 apid 0: AMD 686-class, 2506MHz, id 0x60fb2
cpu1 at mainbus0 apid 1: AMD 686-class, 2506MHz, id 0x60fb2
ioapic0 at mainbus0 apid 2: pa 0xfec00000, version 21, 24 pins
acpi0 at mainbus0: Intel ACPICA 20080321
acpi0: X/RSDT: OemId <082708,OEMRSDT ,20080827>, AslId <MSFT,00000097>
acpi0: SCI interrupting at int 9
acpi0: fixed-feature power button present
timecounter: Timecounter "ACPI-Fast" frequency 3579545 Hz quality 1000
ACPI-Fast 32-bit timer
pckbc1 at acpi0 (PSKE, PNP0303): kbd port
pckbc1: io 0x60,0x64 irq 1
pckbc2 at acpi0 (PSMS, PNP0F03): aux port
pckbc2: irq 12
attimer1 at acpi0 (TMR, PNP0100): AT Timer
attimer1: io 0x40-0x43 irq 0
pcppi1 at acpi0 (SPKR, PNP0800)
pcppi1: io 0x61
midi0 at pcppi1: PC speaker (CPU-intensive output)
sysbeep0 at pcppi1
npx1 at acpi0 (COPR, PNP0C04)
npx1: io 0xf0-0xff irq 13
npx1: reported by CPUID; using exception 16
UAR1 (PNP0501) at acpi0 not configured
FDC (PNP0700) at acpi0 not configured
aiboost0 at acpi0 (ASOC, ATK0110-16843024)
aiboost0: ASUS AI Boost Hardware monitor
hpet0 at acpi0 (HPET, PNP0103)
hpet0: mem 0xfed00000-0xfed003ff
timecounter: Timecounter "hpet0" frequency 14318180 Hz quality 2000
pckbc3 at acpi0 (PS2K, PNP0303): kbd port
pckbc3: io 0x60,0x64 irq 1
panic: pckbc_acpi_attach: couldn't map
fatal breakpoint trap in supervisor mode
trap type 1 code 0 eip c052dd3c cs 8 eflags 246 cr2 0 ilevel 8

	This is the dmesg output for pckbc while disabling acpi:

pckbc0 at isa0 port 0x60-0x64
pckbd0 at pckbc0 (kbd slot)
pckbc0: using irq 1 for kbd slot
wskbd0 at pckbd0: console keyboard, using wsdisplay0


>How-To-Repeat:
	Boot an acpi kernel on a 790gx board.
>Fix:

>Release-Note:

>Audit-Trail:
From: Bernd Ernesti <pr200816@veego.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: port-i386/39671: panic while booting with an acpi kernel on a 790GX board
Date: Sun, 12 Oct 2008 21:01:29 +0200

 Some notes:

 - One possible workaround is to use only the isa attachment for pckbc, while disabling
   the acpi attachment of the pckbc:
 isa0 at pcib0
 pckbc0 at isa0 port 0x60-0x64
 pckbd0 at pckbc0 (kbd slot)
 ioapic0: int1 69<vector=69,delmode=0,dest=0> 0<target=0>
 pckbc0: using irq 1 for kbd slot
 wskbd0 at pckbd0: console keyboard, using wsdisplay0

 so the following three PNP devices are NOT attached to acpi:

 PSKE (PNP0303) [IBM Enhanced (101/102-key, PS/2 mouse support)] at acpi0 not configured
 PSMS (PNP0F03) [Microsoft PS/2-style Mouse] at acpi0 not configured
 PS2K (PNP0303) [IBM Enhanced (101/102-key, PS/2 mouse support)] at acpi0 not configured

 - From a acpidump (using a FreeBSD version and acpi-iasl since the acpidump from the
   NetBSD base system core dumps).
   I remove the PS2M device out of the quote. Full dsl file is available on request.

 Device (SBRG)
 {           
 ..

   Name (ECIN, Zero)
   Mutex (ECMU, 0x00) 
   Mutex (MLMU, 0x00)
   If (ECEN)
   {
 ..

     Name (KBWF, One)
     Name (MSWF, One)
     Name (IRWF, One)
     Device (PSKE)
     {
         Name (_HID, EisaId ("PNP0303"))
         Name (_CID, EisaId ("PNP030B"))
         Method (_STA, 0, NotSerialized)
         {
             Store (Zero, Local1)
             Store (STA (0x07), Local1)
             Return (Local1)
         }

         Name (_CRS, ResourceTemplate ()
         {
             IO (Decode16,
                 0x0060,             // Range Minimum
                 0x0060,             // Range Maximum
                 0x00,               // Alignment
                 0x01,               // Length
                 )
             IO (Decode16,
                 0x0064,             // Range Minimum
                 0x0064,             // Range Maximum
                 0x00,               // Alignment
                 0x01,               // Length
                 )
             IRQNoFlags ()
                 {1}
         })
         Method (_PRW, 0, NotSerialized)
         {
             Return (GPRW (0x03, 0x04))
         }

         Method (_PSW, 1, NotSerialized)
         {
             If (Arg0)
             {
                 Store (One, KBWF)
             }
             Else
             {
                 Store (Zero, KBWF)
             }
         }
     }

 ..

     Method (PPTS, 1, NotSerialized)
     {
         If (^PSKE._STA ())
         {
             If (KBWF)
             {
                 KWEN ()
             }
             Else
             {
                 KWDS ()
             }
         }
     }

     Method (WWAK, 1, NotSerialized)
     {
         If (^PSKE._STA ())
         {       
             KWDS () 
         }
     }   
 ..

   }
 ..

 }

 Device (RMSC)
 {
 ..

   Device (PS2K)
   {
       Name (_HID, EisaId ("PNP0303"))
       Name (_CID, EisaId ("PNP030B"))
       Method (_STA, 0, NotSerialized)
       {           
           ShiftLeft (One, 0x0A, Local0)
           If (And (IOST, Local0))
           {   
               Return (0x0F)
           }   
           Return (Zero)
       }

       Name (_CRS, ResourceTemplate ()
       {   
           IO (Decode16,
               0x0060,             // Range Minimum
               0x0060,             // Range Maximum
               0x00,               // Alignment
               0x01,               // Length
               )
           IO (Decode16,
               0x0064,             // Range Minimum
               0x0064,             // Range Maximum
               0x00,               // Alignment
               0x01,               // Length
               )
           IRQNoFlags ()
               {1}
       })
   }

   Method (PS2K._PRW, 0, NotSerialized)
   {
       Return (GPRW (0x03, 0x03))
   }

 ..

   Method (PS2K._PSW, 1, NotSerialized)
   {           
       If (Arg0)
       {       
           Store (One, KBFG)
       }       
       Else
       {
           Store (Zero, KBFG)
       }
   }

 ..
 }

From: Hauke Fath <hf@spg.tu-darmstadt.de>
To: gnats-bugs@gnats.netbsd.org
Cc: 
Subject: Re: port-i386/39671: panic while booting with an acpi kernel on a
 790GX board
Date: Fri, 7 Nov 2008 14:18:45 +0100

 Same here with netbsd-5 on an AMD 780G (Asus M3A-H/HDMI) board.

 	hauke

 -- 
       The ASCII Ribbon Campaign                    Hauke Fath
 ()     No HTML/RTF in email            Institut für Nachrichtentechnik
 /\     No Word docs in email                     TU Darmstadt
       Respect for open standards              Ruf +49-6151-16-3281

From: Bernd Ernesti <pr200816@veego.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: port-i386/39671 same panic for another board
Date: Sat, 29 Aug 2009 21:04:13 +0200

 Another board where the same panic appears with NetBSD/i386 5.0.1.

 The following panic does NOT happen if I use a USB keyboard instead of
 a ps/2 one.

 MICRO-STAR INTERNATIONAL CO.,LTD MS-7551 (1.0)
 mainbus0 (root)
 cpu0 at mainbus0 apid 0: AMD 686-class, 2600MHz, id 0x60fb2
 cpu0: SVM disabled by the BIOS
 cpu1 at mainbus0 apid 1: AMD 686-class, 2600MHz, id 0x60fb2
 ioapic0 at mainbus0 apid 2: pa 0xfec00000, version 21, 24 pins
 acpi0 at mainbus0: Intel ACPICA 20080321
 acpi0: X/RSDT: OemId <7551MT,A7551010,20090518>, AslId <MSFT,00000097>
 acpi0: SCI interrupting at int 9
 acpi0: fixed-feature power button present
 timecounter: Timecounter "ACPI-Safe" frequency 3579545 Hz quality 900
 ACPI-Safe 32-bit timer
 pckbc1 at acpi0 (PSKE, PNP0303): kbd port
 pckbc1: io 0x60,0x64 irq 1
 pckbc2 at acpi0 (PSMS, PNP0F03): aux port
 pckbc2: irq 12
 attimer1 at acpi0 (TMR, PNP0100): AT Timer
 attimer1: io 0x40-0x43 irq 0
 pcppi1 at acpi0 (SPKR, PNP0800)
 pcppi1: io 0x61
 midi0 at pcppi1: PC speaker (CPU-intensive output)
 sysbeep0 at pcppi1
 npx1 at acpi0 (COPR, PNP0C04)
 npx1: io 0xf0-0xff irq 13
 npx1: reported by CPUID; using exception 16
 hpet0 at acpi0 (HPET, PNP0103)
 hpet0: mem 0xfed00000-0xfed003ff
 timecounter: Timecounter "hpet0" frequency 14318180 Hz quality 2000
 pckbc3 at acpi0 (PS2K, PNP0303): kbd port
 pckbc3: io 0x60,0x64 irq 1
 panic: pckbc_acpi_attach: couldn't map

From: "Jared D. McNeill" <jmcneill@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39671 CVS commit: src/sys/dev/acpi
Date: Sat, 29 Aug 2009 19:17:44 +0000

 Module Name:	src
 Committed By:	jmcneill
 Date:		Sat Aug 29 19:17:44 UTC 2009

 Modified Files:
 	src/sys/dev/acpi: pckbc_acpi.c

 Log Message:
 PR# port-i386/39671: panic while booting with an acpi kernel on a 790GX board

 If the firmware describes duplicate keyboard controller nodes, don't panic
 when the driver fails to map registers.


 To generate a diff of this commit:
 cvs rdiff -u -r1.31 -r1.32 src/sys/dev/acpi/pckbc_acpi.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

Responsible-Changed-From-To: port-i386-maintainer->jmcneill
Responsible-Changed-By: jmcneill@NetBSD.org
Responsible-Changed-When: Mon, 31 Aug 2009 11:30:40 +0000
Responsible-Changed-Why:
I fixed it.


State-Changed-From-To: open->pending-pullups
State-Changed-By: jmcneill@NetBSD.org
State-Changed-When: Mon, 31 Aug 2009 11:30:40 +0000
State-Changed-Why:
http://releng.netbsd.org/cgi-bin/req-5.cgi?show=939


From: Manuel Bouyer <bouyer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39671 CVS commit: [netbsd-5] src/sys/dev/acpi
Date: Sat, 5 Sep 2009 13:10:03 +0000

 Module Name:	src
 Committed By:	bouyer
 Date:		Sat Sep  5 13:10:03 UTC 2009

 Modified Files:
 	src/sys/dev/acpi [netbsd-5]: pckbc_acpi.c

 Log Message:
 Pull up following revision(s) (requested by jmcneill in ticket #939):
 	sys/dev/acpi/pckbc_acpi.c: revision 1.32
 PR# port-i386/39671: panic while booting with an acpi kernel on a 790GX board
 If the firmware describes duplicate keyboard controller nodes, don't panic
 when the driver fails to map registers.


 To generate a diff of this commit:
 cvs rdiff -u -r1.30.4.1 -r1.30.4.2 src/sys/dev/acpi/pckbc_acpi.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Manuel Bouyer <bouyer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39671 CVS commit: [netbsd-5-0] src/sys/dev/acpi
Date: Sat, 5 Sep 2009 13:10:18 +0000

 Module Name:	src
 Committed By:	bouyer
 Date:		Sat Sep  5 13:10:18 UTC 2009

 Modified Files:
 	src/sys/dev/acpi [netbsd-5-0]: pckbc_acpi.c

 Log Message:
 Pull up following revision(s) (requested by jmcneill in ticket #939):
 	sys/dev/acpi/pckbc_acpi.c: revision 1.32
 PR# port-i386/39671: panic while booting with an acpi kernel on a 790GX board
 If the firmware describes duplicate keyboard controller nodes, don't panic
 when the driver fails to map registers.


 To generate a diff of this commit:
 cvs rdiff -u -r1.30 -r1.30.10.1 src/sys/dev/acpi/pckbc_acpi.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sat, 05 Sep 2009 19:44:15 +0000
State-Changed-Why:
pullups completed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.