PR# port-i386/39671: panic while booting with an acpi kernel on a 790GX board

If the firmware describes duplicate keyboard controller nodes, don't panic
when the driver fails to map registers.